# SeniorDesignProject

./: .env  .gitignore  Hours Tracking.xlsx  Milestones.md  Project-Description.md  README.md  TaskList.md  TestPlan.md  Testing and Results.md  User_Stories.md  architecture-example.json  mnist_cnn.pt
src/backend/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  test.ipynb  test.py
src/backend/architectures/: 267553175.arch.json  267553175.layout.json  267553175.meta.json  533833921.arch.json  533833921.layout.json  533833921.meta.json  61790549.arch.json  61790549.layout.json  61790549.meta.json  673853049.arch.json  673853049.layout.json  673853049.meta.json  718290690.meta.json  770158995.arch.json  770158995.layout.json  770158995.meta.json  881753033.arch.json  881753033.layout.json  881753033.meta.json  911615755.arch.json  911615755.layout.json  911615755.meta.json  91477764.arch.json  91477764.layout.json  947207793.meta.json  947387151.arch.json  947387151.layout.json  947387151.meta.json  996435229.arch.json  996435229.layout.json  996435229.meta.json  9992463.arch.json
src/backend/data/: 289679294.meta.json  311950397.layout.json  311950397.meta.json  311950397.pipe.json  59552685.layout.json  59552685.meta.json  59552685.pipe.json  68472812.layout.json  68472812.meta.json  68472812.pipe.json  698602269.meta.json  721760462.layout.json  721760462.pipe.json  89623676.layout.json  89623676.meta.json  89623676.pipe.json  9416037.meta.json  9416037.pipe.json
src/backend/layouts/: 558018902.layout.json
src/backend/models/: 748840939.meta.json  (+3 more)
(+331 files in other folders)
